# perun-cardano-contract

./: .gitignore  CHANGELOG.md  README.md  build-doc.sh  cabal.project  cabal.project.local  human-readable-payment.cbor  payment-transaction-from-error-message.base64  payment.cbor  perun-pab.yaml  perun-plutus.cabal  start-client.sh
.github/workflows/: haskell-ci.yml
app/Client/: Adjudicator.hs  Client.hs  Main.hs  Multi.hs  Websocket.hs
app/PAB/: Main.hs
perun-client/: CHANGELOG.md  README.md  perun-client.cabal
perun-client/app/Client/: Main.hs
perun-client/src/Perun/: Client.hs  Websocket.hs
perun-client/src/Perun/Client/: Adjudicator.hs  Client.hs  Multi.hs
perun-contract/: CHANGELOG.md  README.md  perun-contract.cabal
perun-contract/src/Perun/: Error.hs  Offchain.hs  Onchain.hs  Orphans.hs
perun-contract/src/Perun/Adjudicator/: Adjudicator.hs
perun-contract/src/Perun/Offchain/: State.hs
perun-contract/src/Perun/Offchain/ChannelTxPool/: ChannelTxPool.hs  Types.hs
perun-contract/test/: Spec.hs
perun-contract/test/Perun/: PerunSpec.hs  TestCases.hs
perun-contract/test/Perun/Test/: EvilContract.hs
perun-pab/: CHANGELOG.md  README.md  perun-pab.cabal
perun-pab/app/PAB/: Main.hs
perun-pab/src/Perun/: PAB.hs
src/: Orphans.hs  PAB.hs  Perun.hs  PerunDummy.hs  Types.hs
src/Perun/: Adjudicator.hs  Error.hs  Offchain.hs  Onchain.hs
src/Perun/Adjudicator/: Adjudicator.hs  History.hs
src/Perun/Offchain/: ChannelTxPool.hs  Event.hs  State.hs
src/Perun/Offchain/ChannelTxPool/: ChannelTxPool.hs  Types.hs
src/Verifier/: Honest.hs  Verifier.hs
test/: Spec.hs
test/PerunPlutus/: PerunDummy.hs  PerunDummySpec.hs  PerunSpec.hs  TestCases.hs
test/PerunPlutus/Test/: EvilContract.hs  MockContract.hs
