cabal-version:      2.4
name:               perun-plutus
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Norbert Dzikowski
maintainer:         norbert@perun.network

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared
  default-language: Haskell2010
  build-depends:    base ^>=4.14.1.0
  ghc-options:      -Wall
                    -- Safe to dis-/enable compiler flags. They mainly solve
                    -- issues compiling onchain code because depending on the
                    -- situation plutus-core might not compile due to GHC (Haskell
                    -- compiler) trying to access definitions used on-chain BEFORE
                    -- they are known to GHC.
                    -fno-ignore-interface-pragmas
                    -fno-omit-interface-pragmas
                    -fobject-code
                    -- Uncomment if there are build errors where `ghc`
                    -- complains about "missing files in some package".
                    -- If this helps, file a PR, thanks.
                    --
                    -- -dynamic

library
    import: shared
    exposed-modules:  PerunDummy

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      plutus-tx-plugin
                      , aeson
                      , bytestring
                      , cardano-api
                      , containers
                      , data-default
                      , plutus-contract
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-ledger-constraints
                      , playground-common
                      , plutus-tx
                      , serialise
                      , text
    hs-source-dirs:   src

test-suite perun-plutus-test
  import:             shared
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -fno-warn-type-defaults
  other-modules:      PerunPlutus.PerunDummySpec
  build-depends:      hspec
                    , hspec-expectations
                    , hspec-expectations-pretty-diff
                    , plutus-contract
  build-tool-depends: hspec-discover:hspec-discover == 2.*
