cabal-version:      2.4
name:               perun-plutus
version:            0.1.0.0

Tested-With: GHC ==8.10.7

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jan Bormet
                    Norbert Dzikowski
maintainer:         feedback@perun.network

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared
  default-language: Haskell2010
  build-depends:    base ^>=4.14.1.0
  ghc-options:      -Wall
                    -- Safe to dis-/enable compiler flags. They mainly solve
                    -- issues compiling onchain code because depending on the
                    -- situation plutus-core might not compile due to GHC (Haskell
                    -- compiler) trying to access definitions used on-chain BEFORE
                    -- they are known to GHC.
                    -fno-ignore-interface-pragmas
                    -fno-omit-interface-pragmas
                    -fobject-code
                    -- Uncomment if there are build errors where `ghc`
                    -- complains about "missing files in some package".
                    -- If this helps, file a PR, thanks.
                    --
                    -- -dynamic

executable perun-client
  import:           shared
  hs-source-dirs:   app/Client
  build-depends:    perun-plutus
                    , plutus-contract
                    , plutus-pab
                    , aeson
                    , random
                    , freer-simple
                    , prettyprinter
                    , bytestring
                    , freer-extras
                    , plutus-ledger
                    , data-default
                    , openapi3
                    , servant-client
                    , servant-client-core
                    , http-client
                    , optparse-applicative
                    , cardano-crypto
                    , cardano-wallet-core
                    , cardano-wallet
                    , cardano-api
                    , cardano-addresses
                    , text
                    , text-class
                    , http-conduit
                    , playground-common
  main-is:          Main.hs

executable perun-pab
  import:           shared
  hs-source-dirs:   app/PAB
  build-depends:    perun-plutus
                    , plutus-contract
                    , plutus-pab
                    , aeson
                    , freer-simple
                    , prettyprinter
                    , freer-extras
                    , plutus-ledger
                    , data-default
                    , openapi3
  main-is:          Main.hs

library
    import: shared
    exposed-modules: Perun
                   , Perun.Onchain
                   , Perun.Offchain
                   , PAB

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      plutus-tx-plugin
                      , aeson
                      , bytestring
                      , cardano-api
                      , cardano-wallet
                      , prettyprinter
                      , containers
                      , data-default
                      , plutus-contract
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-ledger-constraints
                      , plutus-script-utils
                      , playground-common
                      , plutus-tx
                      , lens
                      , serialise
                      , text
                      , openapi3
                      , plutus-pab
    hs-source-dirs:   src

test-suite perun-plutus-test
  import:             shared
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -fno-warn-type-defaults
  other-modules:      PerunPlutus.PerunSpec
                    , PerunPlutus.TestCases
                    , PerunPlutus.Test.EvilContract
  build-depends:      hspec
                    , hspec-expectations
                    , QuickCheck -any
                    , tasty -any
                    , tasty-hunit -any
                    , tasty-golden -any
                    , tasty-quickcheck -any
                    , hspec-expectations-pretty-diff
                    , cardano-crypto
                    , perun-plutus
                    , plutus-contract
                    , aeson
                    , containers
                    , plutus-ledger
                    , plutus-ledger-constraints
                    , plutus-ledger-api
                    , plutus-tx
                    , lens
                    , text
                    , extra
                    , freer-simple
                    , freer-extras
                    , bytestring
  build-tool-depends: hspec-discover:hspec-discover == 2.*
