cabal-version:      2.4
name:               perun-plutus
version:            0.1.0.0

Tested-With: GHC ==8.10.7

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jan Bormet
                    Norbert Dzikowski
maintainer:         feedback@perun.network

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared
  default-language: Haskell2010
  build-depends:    base ^>=4.14.1.0
  ghc-options:      -Wall
                    -- Safe to dis-/enable compiler flags. They mainly solve
                    -- issues compiling onchain code because depending on the
                    -- situation plutus-core might not compile due to GHC (Haskell
                    -- compiler) trying to access definitions used on-chain BEFORE
                    -- they are known to GHC.
                    -fno-ignore-interface-pragmas
                    -fno-omit-interface-pragmas
                    -fobject-code

executable perun-client
  import:           shared
  hs-source-dirs:   app/Client
  other-modules:    Websocket
                    Client
                    Adjudicator
                    Multi
  build-depends:    perun-plutus
                    , plutus-contract
                    , plutus-pab
                    , simple-logger
                    , async
                    , aeson
                    , random
                    , prettyprinter
                    , bytestring
                    , plutus-ledger
                    , containers
                    , lens
                    , mtl
                    , websockets
                    , data-default
                    , openapi3
                    , servant-client
                    , servant-client-core
                    , http-client
                    , optparse-applicative
                    , cardano-wallet-core
                    , cardano-wallet
                    , cardano-api
                    , text
                    , text-class
                    , playground-common
  main-is:          Main.hs

executable perun-pab
  import:           shared
  hs-source-dirs:   app/PAB
  build-depends:    perun-plutus
                    , plutus-contract
                    , plutus-pab
                    , aeson
                    , prettyprinter
                    , plutus-ledger
                    , data-default
                    , openapi3
  main-is:          Main.hs

library
    import: shared
    exposed-modules: Perun
                   , PAB
                   , Perun.Adjudicator
                   , Perun.Error
                   , Perun.Offchain
                   , Perun.Onchain
                   , Perun.Offchain.State
                   , Perun.Offchain.Event
                   , Perun.Offchain.ChannelTxPool
                   , Perun.Offchain.ChannelTxPool.ChannelTxPool
                   , Perun.Offchain.ChannelTxPool.Types

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: FlexibleInstances
                      , LambdaCase
                      , TupleSections
                      , TemplateHaskell
                      , PatternSynonyms
                      , DataKinds
                      , FlexibleContexts
                      , OverloadedStrings
                      , TypeApplications
                      , TypeOperators
                      , DeriveAnyClass
                      , DeriveDataTypeable
                      , DeriveGeneric
                      , NumericUnderscores
                      , DerivingStrategies
                      , DerivingVia
                      , FlexibleContexts
                      , GeneralizedNewtypeDeriving
                      , MultiParamTypeClasses
                      , RecordWildCards
                      , ScopedTypeVariables
                      , RankNTypes
                      , TypeFamilies

    build-depends:
                      , aeson
                      , bytestring
                      , cardano-api
                      , cardano-wallet
                      , prettyprinter
                      , containers
                      , data-default
                      , recursion-schemes
                      , plutus-contract
                      , plutus-ledger
                      , plutus-tx-plugin
                      , plutus-ledger-api
                      , plutus-ledger-constraints
                      , plutus-script-utils
                      , plutus-chain-index-core
                      , playground-common
                      , plutus-tx
                      , lens
                      , text
                      , openapi3
                      , plutus-pab
                      , hex-text
    hs-source-dirs:   src

test-suite perun-plutus-test
  import:             shared
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -fno-warn-type-defaults
  other-modules:      PerunPlutus.PerunSpec
                    , PerunPlutus.TestCases
                    , PerunPlutus.Test.EvilContract
  build-depends:      hspec
                    , QuickCheck -any
                    , tasty -any
                    , tasty-hunit -any
                    , tasty-quickcheck -any
                    , cardano-crypto
                    , perun-plutus
                    , plutus-contract
                    , aeson
                    , containers
                    , plutus-ledger
                    , plutus-ledger-constraints
                    , plutus-ledger-api
                    , plutus-tx
                    , lens
                    , text
                    , extra
                    , bytestring
