cabal-version:      2.4
name:               perun-client
version:            0.1.0.0

Tested-With: GHC ==8.10.7

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jan Bormet
                    Norbert Dzikowski
maintainer:         feedback@perun.network

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared
  default-language: Haskell2010
  build-depends:    base ^>=4.14.1.0
  ghc-options:      -Wall
                    -- Safe to dis-/enable compiler flags. They mainly solve
                    -- issues compiling onchain code because depending on the
                    -- situation plutus-core might not compile due to GHC (Haskell
                    -- compiler) trying to access definitions used on-chain BEFORE
                    -- they are known to GHC.
                    -fno-ignore-interface-pragmas
                    -fno-omit-interface-pragmas
                    -fobject-code

executable perun-client-exe
  import: shared
  build-depends:  perun-client
                , perun-contract
                , text
                , data-default
                , lens
                , cardano-wallet
                , cardano-wallet-core
                , text-class
                , mtl
                , random
                , plutus-contract
                , servant-client-core
                , plutus-pab
                , perun-contract
                , optparse-applicative
                , plutus-ledger
                , plutus-tx
                , base16-bytestring
  main-is: Client/Main.hs
  hs-source-dirs: app

library
    import:           shared
    exposed-modules:  Perun.Client
                    , Perun.Client.Client
                    , Perun.Client.Multi
                    , Perun.Client.Adjudicator
                    , Perun.Websocket
    build-depends:
                      , aeson
                      , perun-contract
                      , perun-pab
                      , http-client
                      , mtl
                      , cardano-wallet-core
                      , simple-logger
                      , bytestring
                      , cardano-api
                      , cardano-wallet
                      , containers
                      , data-default
                      , servant-client
                      , servant-client-core
                      , websockets
                      , async
                      , plutus-contract
                      , plutus-ledger
                      , lens
                      , text
                      , plutus-pab
    hs-source-dirs:   src
